// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section snapshots should render Section 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t Section Section--light"
    data-test-section=""
  >
    <div
      class="Section__header Section__header--light"
    >
      <small
        class="css-wcnq0t Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="Section__buttons Section__buttons--light"
      />
    </div>
    children
  </div>
</DocumentFragment>
`;

exports[`Section snapshots should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t Section Section--light"
    data-test-section=""
  >
    <div
      class="Section__header Section__header--light"
    >
      <small
        class="css-wcnq0t Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="Section__buttons Section__buttons--light"
      >
        <div
          class="css-wcnq0t ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="close"
            height="14"
            name="Close"
            width="14"
          />
        </div>
      </div>
    </div>
    children
  </div>
</DocumentFragment>
`;
